[package]
name = "forceatlas2"
version = "0.5.0"
description = "fast force-directed generic n-dimension graph layout"
authors = ["tuxmain <tuxmain@zettascript.org>"]
repository = "https://framagit.org/ZettaScript/forceatlas2-rs"
documentation = "https://docs.rs/forceatlas2"
keywords = ["graph", "force"]
categories = ["visualization"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
bumpalo = { version = "3.14.0", features = ["boxed"] }
maths-traits = "0.2.1"
num-traits = "0.2.17"
packed_simd = { version = "0.3.9", optional = true }
rand = { version = "0.8.5", optional = true }
rayon = { version = "1.8.1", optional = true }

[dev-dependencies]
alloc_counter = "0.0.4"
itertools = "0.12.0"
plotters = "0.3.5"
scanrs = "0.3.0"
sdl2 = "0.35.2"
stl = { git = "https://github.com/etrombly/rust-stl" }

[features]
default = ["rand", "parallel"]
parallel = ["rayon"]
simd = ["packed_simd"]

[workspace]
members = ["examples/viz"]
