[package]
name = "forceatlas2"
version = "0.5.0"
description = "fast force-directed generic n-dimension graph layout"
authors = ["tuxmain <tuxmain@zettascript.org>"]
repository = "https://framagit.org/ZettaScript/forceatlas2-rs"
documentation = "https://docs.rs/forceatlas2"
keywords = ["graph", "force", "spatialization"]
categories = ["visualization"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
bumpalo = { version = "3.4", features = ["boxed"] }
num-traits = "0.2"
parking_lot = "0.12"
rand = { version = "0.8", optional = true }
rayon = "1.8"

[features]
default = ["rand"]

[workspace]
members = ["examples/viz"]
