[package]
name = "viz"
version = "0.1.0"
edition = "2021"

[dependencies]
cam-geom = "0.14.0"
forceatlas2 = { path = "../..", features = ["barnes_hut"] }
gio = "0.17.10"
glib = "0.17.10"
gdk = "0.17.1"
gdk-pixbuf = "0.17.10"
gtk = "0.17.1"
nalgebra = "0.32.2"
parking_lot = "0.12.1"
rand = "0.8.5"
static-rc = "0.6.1"
