[package]
name = "viz"
version = "0.1.0"
edition = "2021"

[dependencies]
cam-geom = "0.14.1"
forceatlas2 = { path = "../..", features = ["barnes_hut"] }
gio = "0.18.4"
glib = "0.18.5"
gdk = "0.18.0"
gdk-pixbuf = "0.18.5"
gtk = "0.18.1"
nalgebra = "0.32.3"
parking_lot = "0.12.1"
rand = "0.8.5"
static-rc = "0.6.1"
